fix: adjust alignment in records-show container

--- a/random-game/style.css
+++ b/random-game/style.css
@@ -182,11 +182,13 @@ button:hover {
 
 .records-show {
 	margin: 50px 0 0;
-	width: 440px;
+	width: 400px;
+
 	display: flex;
 	flex-direction: column;
-	justify-content: space-evenly;
-	align-items: flex-start;
+	align-items: center;
+	
+	gap: 20px;
 }
 
 .back {
